--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
-/*div, .description {
+div, .digits, p, h2 {
   border: 1px solid red;
-}*/
+}
 
 .page {
   min-width: 1100px;
@@ -33,21 +33,18 @@
   display: flex;
   position: relative;
   background-color: #f2f2f2;
-  /* выше установили ограничения для секции */
 }
 
 .header__title {
   width: 730px;
-  margin: auto 0px auto 64px;
+  margin-left:64px;
+  align-self: center;
   z-index: 2;
-}
-
-.header__title-text{
-  margin: 0;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
 }
+
 
 .header__subtitle {
   position: absolute;
@@ -55,10 +52,6 @@
   left: 64px;
   width: 388px;
   z-index: 2;
-}
-
-.header__subtitle-text {
-  margin: 0;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
@@ -77,12 +70,6 @@
   z-index: 1;
 }
 
-.header__main-illustration-picture {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
@@ -91,10 +78,6 @@
   right: 0px;
   background-color: #2f80ed;
   z-index: 0;
-}
-
-.description {
-  display: flex;
 }
 
 .two-columns {
@@ -137,7 +120,61 @@
 .two-column__span-accent {
   font-weight: bold;
 }
-/* и элемента с модификатором вида ключ-значение */
+
+.digits {
+  display: flex;
+  flex-direction: column;
+}
+
+.section-title {
+  margin: 100px auto 20px auto;
+  width: 60%;
+  line-height: 69px;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.section-subtitle {
+  margin: 0px auto;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.table {
+  width: 1100px;
+  margin: 0px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  margin-bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-bottom: 20px;
+}
+
+.table__text_end {
+  margin-bottom: 0px;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
