--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-div, .digits, p, h2 {
-  border: 1px solid red;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -24,6 +20,13 @@ div, .digits, p, h2 {
   position: absolute;
   top: 30px;
   left: 64px;
+}
+
+.logo_place_footer {
+  margin-top: 0px;
+  margin-left: 0px;
+  width: 183px;
+  height: 35px;
 }
 
 .header {
@@ -90,9 +93,6 @@ div, .digits, p, h2 {
 
 .two-columns__brief {
   width: 175px;
-}
-
-.two-columns__brief-text {
   margin: 0;
   line-height: 1.2;
   font-size: 18px;
@@ -105,16 +105,9 @@ div, .digits, p, h2 {
 }
 
 .two-columns__paragraph {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-}
-
-.two-columns__paragraph_indent {
-  margin-bottom: 30px;
 }
 
 .two-column__span-accent {
@@ -198,6 +191,7 @@ div, .digits, p, h2 {
   display: flex;
   flex-direction: column;
   height: 790px;
+  background-color: #f2f2f2;
 }
 
 .feynman__title {
@@ -207,10 +201,11 @@ div, .digits, p, h2 {
   font-size: 120px;
   font-weight: bold;
   z-index: 1;
+  text-align: center;
 }
 
 .feynman__subtitle {
-  margin: 0 auto;
+  margin: 0px auto;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -225,6 +220,7 @@ div, .digits, p, h2 {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  color: black;
 }
 
 .feynman__image {
@@ -251,4 +247,58 @@ div, .digits, p, h2 {
   z-index: 1;
   width: 877px;
   height: 877px;
+}
+
+.footer {
+  display: flex;
+  min-height: 350px;
+  background-color: #1f1f1f;
+}
+
+.footer__columns {
+  margin: 60px auto 40px auto;
+  width: 90%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__author {
+  margin: 18px 520px 18px 0px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+
+.footer__column_content_info {
+  flex-basis: 130px;
+}
+
+.footer__column-heading {
+  margin: 0px auto 20px auto;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  color: white;
+  margin: 0px auto 16px auto;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+}
+
+.footer__column_content_social {
+  flex-basis: 120px;
 }
