--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@
 
 .header__link {
   text-decoration: none;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -191,6 +192,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  padding-top: 100px;
   height: 790px;
   background-color: #f2f2f2;
 }
@@ -242,6 +244,8 @@
 }
 
 .kaufman__triangle {
+  background-image: url('../images/kaufman-triangle.svg');
+  background-size: cover;
   position: absolute;
   right: -210px;
   top: 0px;
@@ -292,14 +296,24 @@
 }
 
 .footer__column-links {
-  color: white;
   margin: 0px auto 16px auto;
+  list-style-type: none;
+  padding: 0px;
+}
+
+.footer__column-link {
+  text-decoration: none;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
-  text-decoration: none;
+  color: white;
 }
 
 .footer__column_content_social {
   flex-basis: 120px;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
 }
