--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -3,7 +3,7 @@
 .section-subtitle {
   margin: 0px auto;
   width: 60%;
-  line-height: 1.15;
+  line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
