add transparence of links

--- a/pages/index.css
+++ b/pages/index.css
@@ -10,3 +10,5 @@
 @import url('../blocks/feynman/feynman.css');
 @import url('../blocks/kaufman/kaufman.css');
 @import url('../blocks/footer/footer.css');
+@import url('../blocks/transparence/transparence.css');
+
