--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -3,7 +3,7 @@
 .section-title {
   margin: 0px auto 20px auto;
   width: 60%;
-  line-height: 69px;
+  line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
   text-align: center;
