--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,13 @@
 @import url('../vendor/normalize.css');
+@import url('../blocks/transparence/transparence.css');
+@import url('../blocks/rotation/rotation.css');
 @import url('../blocks/page/page.css');
 @import url('../blocks/logo/logo.css');
 @import url('../blocks/header/header.css');
+@import url('../blocks/description/description.css');
+@import url('../blocks/techniques/techniques.css');
+@import url('../blocks/cards/cards.css');
+@import url('../blocks/video/video.css');
 @import url('../blocks/two-columns/two-columns.css');
 @import url('../blocks/digits/digits.css');
 @import url('../blocks/section-title/section-title.css');
@@ -10,5 +16,4 @@
 @import url('../blocks/feynman/feynman.css');
 @import url('../blocks/kaufman/kaufman.css');
 @import url('../blocks/footer/footer.css');
-@import url('../blocks/transparence/transparence.css');
 
